--- a/Moto-Project/aboutus.html
+++ b/Moto-Project/aboutus.html
@@ -97,9 +97,9 @@
         guides and top-notch motorcycles.
       </p>
       <div class="top-image">
-        <img src="./assets/aboutus-image1.jpg" alt="">
+        <img src="./assets/aboutus-image1.jpg" alt="" />
       </div>
-      
+
       <h2>About Our Tours</h2>
       <p>
         Embark on our "Island to Island" tour, guiding you through picturesque
@@ -108,7 +108,7 @@
         thrilling rides through mountain trails and along the Adriatic coast.
       </p>
       <div class="top-image">
-        <img src="./assets/aboutus-image2.jpg" alt="">
+        <img src="./assets/aboutus-image2.jpg" alt="" />
       </div>
       <h2>Our Motorcycles</h2>
       <p>
@@ -124,7 +124,7 @@
       <section class="section-one_aboutus">
         <img src="./assets/image1.jpg" alt="image" />
 
-        <h3>Naša Misija</h3>
+        <h3>Our Mission</h3>
         <p>
           Mi smo strastvena zajednica ljubitelja motocikala posvećena promicanju
           slobode i avanture na dva kotača. Naša misija je povezati vozače iz
@@ -163,11 +163,11 @@
     <section>
       <div class="middle-section_main">
         <div class="middle-title">
-          <h3>Pratite nas na putovanju!</h3>
+          <h3>Follow us on our journey!</h3>
           <p>
-            Započnite putovanje s nama! Pratite nas na društvenim mrežama i
-            istražujte svijet kroz naše oči - putovanja, avanture i nevjerojatni
-            trenuci na cestama!
+            Embark on the journey with us! Follow us on social media and explore
+            the world through our eyes - travels, adventures, and incredible
+            moments on the roads!
           </p>
         </div>
 
