--- a/Moto-Project/aboutus.html
+++ b/Moto-Project/aboutus.html
@@ -126,10 +126,10 @@
 
         <h3>Our Mission</h3>
         <p>
-          Mi smo strastvena zajednica ljubitelja motocikala posvećena promicanju
-          slobode i avanture na dva kotača. Naša misija je povezati vozače iz
-          cijelog svijeta te dijeliti iskustva i priče koje inspiriraju novu
-          generaciju entuzijasta.
+          We are a passionate community of motorcycle enthusiasts dedicated to
+          promoting the freedom and adventure on two wheels. Our mission is to
+          connect riders from around the world and share experiences and stories
+          that inspire a new generation of enthusiasts."
         </p>
       </section>
 
@@ -137,12 +137,12 @@
       <section class="section-two_aboutus">
         <img src="./assets/image2.jpg" alt="image" />
 
-        <h3>Što Nas Čini Posebnima</h3>
+        <h3>WHY US?</h3>
         <p>
-          Ono što nas izdvaja je ljubav prema vožnji, istraživanju nepoznatog i
-          gradnji snažne zajednice. Bez obzira jeste li iskusni vozač ili tek
-          započinjete svoju vozačku avanturu, ovdje ćete pronaći podršku,
-          inspiraciju i prijateljstvo.
+          What sets us apart is the love for riding, exploring the unknown, and
+          building a strong community. Whether you're an experienced rider or
+          just starting your riding adventure, here you will find support,
+          inspiration, and friendship.
         </p>
       </section>
 
@@ -150,12 +150,12 @@
       <section class="section-three_aboutus">
         <img src="./assets/image3.jpg" alt="image" />
 
-        <h3>Pogledajte našu Stranicu u Akciji</h3>
+        <h3>Check our Tours</h3>
         <p>
-          Zaronite duboko u svijet Moto Toura putem naših videozapisa.
-          Pregledajte naše vožnje, doživite uzbuđenje krivudavih cesta i zajedno
-          s nama dijelite radosti motociklizma. Pritisnite play i krenite s nama
-          na nezaboravnu avanturu!
+          Dive deep into the world of Moto Tours through our videos. Explore
+          our rides, experience the thrill of winding roads, and join us in
+          sharing the joys of motorcycling. Press play and embark on an
+          unforgettable adventure with us!"
         </p>
       </section>
     </div>
