--- a/Moto-Project/news.html
+++ b/Moto-Project/news.html
@@ -147,7 +147,7 @@
           <img src="./assets/gallery/mapkorcula.jpg" alt="baza" />
         </div>
         <div class="news-text">
-          <h3>KORČULA AND GAME OF Thrones TOUR</h3>
+          <h3>KORČULA AND GAME OF THRONES TOUR</h3>
           <div class="date">
             <i class="fa-regular fa-calendar"
               ><span>12.08.2024. - 15.08.2024</span></i
